# sparkle_log

./: .gitignore  .jiggle_version.config  .pre-commit-config.yaml  .pydoctest.json  .pylintrc  AGENTS.md  CHANGELOG.md  KILO_TODO.md  Makefile  Makefile.old  README.md  private_dictionary.txt  pyproject.toml  test.sh  tox.ini
.claude/: settings.local.json
.github/workflows/: build.yml  publish_to_pypi.yml  release.yml
docs/: IDEAS.md  TODO.md
scripts/: basic_checks.sh  make_prompt.sh  make_source.sh
sparkle_log/: __about__.py  __init__.py  __main__.py  as_context_manager.py  as_decorator.py  custom_types.py  drive_space.py  graphs.py  log_w.py  log_writer.py  scheduler.py  ui.py
tests/: test___main__.py  test_as_decorator.py  test_bugs.py  test_log_writer.py  test_sparkle_log.py
tests/test_run_sparkle_31_sparkle_log_gpt4/: test___main__.log.json  test___main__.log.md  test___main__.py  test_as_context_manager.log.json  test_as_context_manager.log.md  test_as_context_manager.py  test_as_decorator.log.json  test_as_decorator.log.md  test_as_decorator.py  test_log_writer.log.json  test_log_writer.log.md  test_log_writer.py  test_scheduler.log.json  test_scheduler.log.md  test_scheduler.py
